Minor fixes. - navbar centered; - header gradient z-index fixed so socials are clickable; - video-button color changed

--- a/itv/css/style.css
+++ b/itv/css/style.css
@@ -12042,7 +12042,7 @@ section {
 }
 
 .video-button {
-  background-color: #244376;
+  background-color: #3f3c97;
   color: white;
   padding: 5px 20px;
   font-family: "Roboto Condensed", sans-serif;
@@ -12054,6 +12054,8 @@ section {
 .video-button:hover {
   background-color: #e6d300;
   color: black;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .topnav {
@@ -12134,15 +12136,16 @@ section {
   position: relative;
 }
 
-.header-main::before {
+.header-main::after {
   content: " ";
+  z-index: 1;
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 1;
-  background-image: radial-gradient(circle at 30% 0%, rgba(255, 255, 255, 0.05) 0%, rgba(0, 0, 0, 0) 75%);
+  opacity: 0.2;
+  background-image: radial-gradient(circle at 30% 0%, rgba(255, 255, 255, 0.75) 0%, rgba(255, 255, 255, 0) 75%);
   background-repeat: no-repeat;
 }
 
@@ -12161,6 +12164,7 @@ section {
 
 .header-main-socials {
   display: none;
+  z-index: 100;
 }
 
 @media (min-width: 768px) {
