--- a/itv/scss/layout/_header-main.scss
+++ b/itv/scss/layout/_header-main.scss
@@ -4,15 +4,16 @@
   position: relative;
 } 
 
-.header-main::before {
+.header-main::after {
   content: " ";
+  z-index: 1;
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 1;
-  background-image: radial-gradient(circle at 30% 0%, rgba(255, 255, 255, 0.05) 0%, rgba(0, 0, 0, 0) 75%);
+  opacity: 0.2;
+  background-image: radial-gradient(circle at 30% 0%, rgba(255, 255, 255, 0.75) 0%, rgba(255, 255, 255, 0) 75%);
   background-repeat: no-repeat;
   // background-position: 110% 0;
   // background-size: contain;
@@ -32,6 +33,7 @@
 
 .header-main-socials {
   display: none;
+  z-index: 100;
 }
 
 @include media-breakpoint-up(md) {
